--- a/src/main/resources/cypath2.properties
+++ b/src/main/resources/cypath2.properties
@@ -1,5 +1,5 @@
 cypath2.description=\
-<html><body><h2>CyPathwayCommons app v.${project.version}</h2><p>\
+<html><body><h2>CyPath2 app v.${project.version}</h2><p>\
 This Cytoscape application provides access from within Cytoscape to the \
 <a href='http://www.pathwaycommons.org'>Pathway Commons (PC)</a> \
 library of biological pathways and interactions. \
