Added blacklist.txt - used for SIF converting; also polished hits detail and filter panel (TODO: debug, because I broke smth. in HitsFilterPanel...)

--- a/src/main/resources/cypath2.properties
+++ b/src/main/resources/cypath2.properties
@@ -1,11 +1,10 @@
 cypath2.description=\
-<html><body><h2>CyPath2 app v.${project.version}</h2><p>\
-This Cytoscape application provides access from within Cytoscape to the \
+<html><body><h2>Pathway Commons CyPath2 v.${project.version}</h2><p>\
+This app provides access from within Cytoscape to the \
 <a href='http://www.pathwaycommons.org'>Pathway Commons (PC)</a> \
 library of biological pathways and interactions. \
-Data are collected from several major pathway data providers \
-based on their BioPAX and PSI-MI formatted export files. \
-The PC team selects, validates, normalizes, merges, indexes \
-the data and runs a <a href='http://www.pathwaycommons.org/pc2/'>web service, \
-powered by the cPath2 software, to which this Cytoscape app connects. \
-</p></body></html>
+BioPAX and PSI-MI formatted data were collected \
+from several curated biological pathway data providers. \
+The PC team selected, validated, normalized, merged and indexed \
+the data to run a <a href='http://www.pathwaycommons.org/pc2/'>web services</a>, \
+powered by the cPath2 software, to which this app connects.</p></body></html>
