Fixed:  pop up "no data" message when a graph query gets such response; improved: search UI layout, dynamic search results list title, "total hits" message, etc.

--- a/src/main/resources/cypath2.properties
+++ b/src/main/resources/cypath2.properties
@@ -6,5 +6,5 @@ library of biological pathways and interactions. \
 BioPAX and PSI-MI formatted data were collected \
 from several curated biological pathway data providers. \
 The PC team selected, validated, normalized, merged and indexed \
-the data to run a <a href='http://www.pathwaycommons.org/pc2/'>web services</a>, \
-powered by the cPath2 software, to which this app connects.</p></body></html>
+the data and run the <a href='http://www.pathwaycommons.org/pc2/'>web services</a>, \
+powered by the cPath2 software, to which this app &quot;talks&quot;.</p></body></html>
