--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
 	
 	<groupId>org.pathwaycommons</groupId>
 	<artifactId>cypath2</artifactId>
-	<version>1.2.0-SNAPSHOT</version>
+	<version>1.2.0</version>
 	
 	<name>CyPath2</name>
 	<description>
