--- a/pom.xml
+++ b/pom.xml
@@ -11,11 +11,11 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<cytoscape.api.version>3.3.0</cytoscape.api.version>
 		<osgi.api.version>4.2.0</osgi.api.version>
-		<paxtools.version>5.0.0-SNAPSHOT</paxtools.version>
-		<cpath2.version>6.1.0-SNAPSHOT</cpath2.version>
-		<spring.version>3.2.8.RELEASE</spring.version>
+		<paxtools.version>5.1.0-SNAPSHOT</paxtools.version>
+		<cpath2.version>7.0.0-SNAPSHOT</cpath2.version>
+		<spring.version>4.3.7.RELEASE</spring.version>
 		<maven-enforcer-plugin>1.2</maven-enforcer-plugin>
-		<slf4j.version>1.7.5</slf4j.version>
+		<slf4j.version>1.7.25</slf4j.version>
 		<java.version>1.8</java.version>
 		<maven.version.range>[3.0.0,4.0.0)</maven.version.range>
 		<maven-bundle-plugin.version>2.5.4</maven-bundle-plugin.version>
@@ -25,7 +25,7 @@
 	
 	<groupId>org.pathwaycommons</groupId>
 	<artifactId>cypath2</artifactId>
-	<version>1.2.1-SNAPSHOT</version>
+	<version>1.2.1</version>
 	
 	<name>CyPath2</name>
 	<description>
