--- a/src/main/resources/cypath2.properties
+++ b/src/main/resources/cypath2.properties
@@ -1,5 +1,5 @@
 cypath2.description=\
-<html><body><h2>Pathway Commons CyPath2 v.${project.version}</h2><p>\
+<html><body><h2>Pathway Commons App</h2><p>\
 This app provides access from within Cytoscape to the \
 <a href='http://www.pathwaycommons.org'>Pathway Commons (PC)</a> \
 library of biological pathways and interactions. \
@@ -7,4 +7,6 @@ BioPAX and PSI-MI formatted data were collected \
 from several curated biological pathway data providers. \
 The PC team selected, validated, normalized, merged and indexed \
 the data and run the <a href='http://www.pathwaycommons.org/pc2/'>web services</a>, \
-powered by the cPath2 software, to which this app &quot;talks&quot;.</p></body></html>
+powered by the cPath2 software, to which this app &quot;talks&quot;.</p>\
+<p>${project.artifactId}-${project.version} ${timestamp}</p>\
+</body></html>
